fix : 광고회사